v.0.26 LOG + RESOLUTION DE GETLAST GETFIRST